--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -58,15 +58,16 @@ Det følger fra definition \ref{defn:mxinvers}, at $A^{-1}A=I_n$.
 Jævnfør sætning punkt (g) i  \ref{thm:mxmulti} følger det hermed, at $A^T(A^{-1})^T=(A^{-1}A)^T=I_n^T=I_n$. 
 Ligeledes kan det vises, at $(A^{-1})^TA^T=I_n$. 
 Derfor er $A^T$ en invertibel matrix med inversen $(A{-1})^T$ og $(A^T)^{-1}A=(A^{-1})^T$.
-\end{proof}
+\end{proof}\\
 %
 %NOGET OM ELEMENTÆRE MATRICER OG INVERTIBILITET
 %
+Enhver rækkeoperation kan udføres ved hjælp af matrixmultiplikation.
 \begin{thm}{}{eleinv}
 Lad $A$ være en $m \times n$ matrix, og $R$ den reducerede trappeform af $A$. 
-Så eksisterer der en invertibel $m \times m$ matrix $P$, så $PA=R$.
+Så eksisterer der en invertibel $m \times m$ matrix $P=E_kE_{k-1} \cdots E_1$, så $PA=R$.
 \end{thm}
-%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% HER
 \begin{proof}
 \textbf{Beviset kommer senere }
 \end{proof}
