--- a/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
@@ -3,7 +3,7 @@
 Det er ofte nødvendigt at multiplicere matricer med andre matricer. 
 \begin{defn}{}{mxmulti}
 Lad $A$ være en $m \times n$ matrix og $B$ være en $n \times p$ matrix.
-\textbf{Matrixproduktet} $AB$  er en $m \times p$ matrix $C$, hvor 
+\textbf{Matrixproduktet} $AB$  er en $m \times p$ matrix 
 $$
 C=
 \begin{bmatrix}
