--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -7,7 +7,7 @@ En mængde $S \subset \R^n$ er konveks, hvis $\lamda \textbf{x} + (1-\lambda )\t
 %
 En mængde er med andre ord konveks, hvis ethvert element på en ret linje mellem to vilkårlige punkter $x$ og $y$ i mængden også tilhører mængden. På figur \ref{asdf} ses eksempler på konvekse og ikke-konvekse mængder. 
 
-\begin{figure}[h!]
+\begin{figure}[H]
   \centering
   \begin{tikzpicture}
     \tikzset{punkt/.style={point, draw=black}}
@@ -18,6 +18,8 @@ En mængde er med andre ord konveks, hvis ethvert element på en ret linje melle
 	\node at (4,4)	(1){};
 	\node at (-4,4)	(4){};
 	\node at (4,-4)	(2){};
+	\node at (-4,-4) (3){};
+	\node at (-4,-4) (3){};
 	\node at (-4,-4) (3){};
 
 
@@ -42,6 +44,6 @@ En mængde er med andre ord konveks, hvis ethvert element på en ret linje melle
 	\draw[-, dashed,black,ultra thick] (-4,2) -- (-4,-2);
 
   \end{tikzpicture}
-  \caption{En afgrænset polytop $P$ hvor $\textbf{x}$ er et ekstramapunkt da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$ sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$. $\textbf{w}$ er i modsætning ikke et ekstremapunkt da der findes $\textbf{v}$ og $\textbf{u}$ sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda)u$.}
-  \label{fig:ekstrema}
+  \caption{}
+  \label{fig:konveks}
 \end{figure}
