--- a/incl/main/grafisk_losning/grafisk_losning.tex
+++ b/incl/main/grafisk_losning/grafisk_losning.tex
@@ -1,5 +1,6 @@
 \chapter{Grafisk løsning}
 % God arbejdslyst 
 \input{incl/main/grafisk_losning/Hyperplan_halvrum_polyeder}
+\input{incl/main/grafisk_losning/Konvekse_maengder} %%%%%
 \input{incl/main/grafisk_losning/alg_hjorne}
 \input{incl/main/grafisk_losning/Ekstrema,punkter}
