--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -2,48 +2,44 @@
 %
 I forbindelse med mængder af vektorer er det vigtigt at definere \textit{konvekse mængder}.
 \begin{defn}{}{konveks}
-En mængde $S \subset \R^n$ er konveks, hvis $\lamda \textbf{x} + (1-\lambda )\textbf{y} \in S$ for ethvert $\textbf{x}, \textbf{y} \in S$ og ethvert $\lamda \in [0,1]$. 
+En mængde $S \subset \R^n$ er konveks, hvis $ \lambda \textbf{x} + (1-\lambda )\textbf{y} \in S$ for ethvert $\textbf{x}, \textbf{y} \in S$ og ethvert $ \lambda \in [0,1]$. 
 \end{defn}
 %
-En mængde er med andre ord konveks, hvis ethvert element på en ret linje mellem to vilkårlige punkter $x$ og $y$ i mængden også tilhører mængden. På figur \ref{asdf} ses eksempler på konvekse og ikke-konvekse mængder. 
-
+En mængde er med andre ord konveks, hvis ethvert element på en ret linje mellem to vilkårlige punkter $x$ og $y$ i mængden også tilhører mængden. 
+På figur !REF HER! ses eksempler på konvekse og ikke-konvekse mængder. 
+%
 \begin{figure}[H]
   \centering
   \begin{tikzpicture}
     \tikzset{punkt/.style={point, draw=black}}
-    
-    
-%Punkter
-
-	\node at (4,4)	(1){};
-	\node at (-4,4)	(4){};
-	\node at (4,-4)	(2){};
-	\node at (-4,-4) (3){};
-	\node at (-4,-4) (3){};
-	\node at (-4,-4) (3){};
-
-
-	\filldraw[black, fill=blue!5] (2) rectangle (4);
-	\node at (0,0) (P){$P$};
-	
-	\filldraw [black] (2,4) circle (2pt);
-	\filldraw [black] (4,4) circle (2pt);
-	\filldraw [black] (6,4) circle (2pt);
-	\filldraw [black] (-4,2) circle (2pt);
-	\filldraw [black] (-4,0) circle (2pt);
-	\filldraw [black] (-4,-2) circle (2pt);	
-	\node at (2,4.25)	 (y){$\textbf{y}$};
-	\node at (4,4.25)	 (x){$\textbf{x}$};
-	\node at (6,4.25)	 (z){$\textbf{z}$};
-	\node at (-3.75,2)  (v){$\textbf{v}$};
-	\node at (-3.75,0)	 (w){$\textbf{w}$};
-	\node at (-3.75,-2) (u){$\textbf{u}$};
-
-
-	\draw[-, dashed,black,ultra thick] (6,4) -- (2,4);
-	\draw[-, dashed,black,ultra thick] (-4,2) -- (-4,-2);
 
   \end{tikzpicture}
   \caption{}
   \label{fig:konveks}
 \end{figure}
+%
+\begin{defn}{}{konvekskombiskrog}
+Lad $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k \in \R^n$, og $\lambda_1, \lambda_2, \ldots, \lambda_k$ være ikke-negative skalarer, hvis sum er $1$. 
+\begin{enumerate}[label=(\alph*)]
+	\item Vektoren $$\sum_{i=1}^{k} \lambda_i \textbf{x}^i$$ kaldes en \textbf{konveks kombination} af vektorerne $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k$. 
+	\item Det \textbf{konvekse skrog} af vektorerne $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k$ er mængden af alle konvekse kombinationer af disse vektorer. 
+%Det hedder vel ikke konvekse skrog, hvad kalder vi det? HORIA HJÆLP JENS
+\end{enumerate}
+\end{defn}
+%
+%Evt. noget metatekst
+%
+\begin{thm}{}{konveks}
+\begin{enumerate}[label=(\alph*)]
+	\item Skæringspunktet for konvekse mængder er konvekst. 
+	%Det hedder ikke skæringspunktet, det er det mellemliggende, ved ikke hvad det hedder
+	\item Enhver polyhedron er en konveks mængde.
+	\item En konveks kombination af et endeligt antal elementer fra en konveks mængde tilhører også den mængde. 
+	\item Det konvekse skrog af et endeligt antal vektorer er en konveks mængde. 
+\end{enumerate}
+\end{thm}
+%
+%
+\begin{proof}
+Jaja
+\end{proof}
