--- a/fig/tikz/ekstrema.tex
+++ b/fig/tikz/ekstrema.tex
@@ -1,7 +1,7 @@
 
 \begin{figure}[h!]
   \centering
-  \begin{tikzpicture}
+  \begin{tikzpicture}[scale=0.7]
     \tikzset{punkt/.style={point, draw=black}}
     
     
