Update Hyperplan_halvrum_polyeder.tex, alg_hjorne.tex, and generalt.tex

--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -42,7 +42,7 @@ Lad $\mathbf{a}$ være en vektor i $\R^n$, hvor $\mathbf{a} \neq \mathbf{0}$ og 
 \noindent
 %
 Det gælder her, at hyperplanet er grænsen for et tilsvarende halvrum.
-I $\R^2$ vil hyperplanet således være en ret linje, som afskære en del af rummet, og der vil dermed være et halvrum på hvad side af hyperplanet.
+I $\R^2$ vil hyperplanet således være en ret linje, som afskære en del af rummet, og der vil dermed være et halvrum på hver side af hyperplanet.
 På figur \ref{fig:Graf123} ses et udsnit af hyperplanet, som afskærer et halvrum markeret med gråblå og et halvrum markeret med orangerød. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -150,6 +150,6 @@ vil $\mathbf{a}$ være ortogonal med hyperplanet.
 \end{thm}
 % 
 \begin{proof}
-Lad $\mathbf{x}$ og $\mathbf{x}$ tilhører det samme hyperplan, så er $\mathbf{a}^Tx=\mathbf{a}^Ty.$
+Lad $\mathbf{x}$ og $\mathbf{y}$ tilhører det samme hyperplan, så er $\mathbf{a}^Tx=\mathbf{a}^Ty.$
 Dermed er $\mathbf{a}^T(x-y)=0$, og så er $\mathbf{a}$ ortogonal til alle vektorer i hyperplanet. 
 \end{proof}
