--- a/incl/main/grafisk_losning/alg_hjorne.tex
+++ b/incl/main/grafisk_losning/alg_hjorne.tex
@@ -11,7 +11,7 @@ Så er følgende udsagn ækvivalente.
 %
 \begin{enumerate}[label=(\alph*)]
 \item Der eksisterer $n$ vektorer i mængden $\{\textbf{a}_i|i \in I \}$, som er lineært uafhængige.
-\item Spannet af vektorerne $\textbf{a}_i$, for $i$ i $I$, dækker hele $\R^n$.
+\item Spannet af vektorerne $\textbf{a}_i$, for $i \in I$, dækker hele $\R^n$.
 \item Ligningssystemet $\textbf{a}^T_i\textbf{x}= b_i$, for $i \in I$, har en entydig løsning.
 \end{enumerate}
 \end{thm}
