--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -22,7 +22,8 @@ Et lineært maksimumsproblem kan opstilles som følgende:
 hvor $\textbf{c}^T\textbf{x}$ er objektfunktionen og $\textbf{a}^T\textbf{x}$ er de lineære betingelser samt $M_1, M_2, M_3, N_1, N_2$ er endelige mængder med indekser.
 \textit{Løsningsmængden} betegner mængden af vektorer, som opfylder alle betingelserne.
 Vektorer indeholdt i løsningsmængden kaldes for \textit{løsningsvektorer}.
-Hvis mulighedsområdet er uendeligt stort, kaldes optimeringsproblemet for \textit{ubegrænset}; ellers kaldes det \textit{begrænset}.\\\\
+Hvis værdiområdet er uendeligt stort, kaldes optimeringsproblemet for \textit{ubegrænset}; ellers kaldes det \textit{begrænset}, hvilket vil blive defineret senere i rapporten. 
+\\\\
 %
 \begin{eks}
 \label{eks:min_lin}
