--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -1,21 +1,21 @@
 I henhold til geometriske fremstillinger af lineære programmeringsproblemer er det nødvendigt at definere en række begreber.
-Disse er \textit{hyperplan}, \textit{halvrum} og \textit{polytop}.
+Disse er \textit{hyperplan}, \textit{halvrum} og \textit{polyede}.
 %
-\begin{defn}{}{Polytop}
+\begin{defn}{}{Polyede}
 Lad $A$ være en $m \times n$ matrix, og lad $\mathbf{b}$ være en vektor i  $\R^m$.
-En \textbf{polytop} er en mængde, der kan beskrives som 
+En \textbf{polyede} er en mængde, der kan beskrives som 
 $\{x\in \R^n \mid A\mathbf{x}\geq b\}.$
 %
 \end{defn}
 \noindent
 %
 Som det fremgår fra definitionen, er en polyetop således mængden af mulige løsninger $\mathbf{x}$ af et ligningssystem.
-Det gælder endvidere, at en mængde af formen $ \{x \in \R^n \mid A\textbf{x}=b,x \geq 0 \}$, hvilket kaldes en \textit{polytop på standardform}. 
+Det gælder endvidere, at en mængde af formen $ \{x \in \R^n \mid A\textbf{x}=b,x \geq 0 \}$, hvilket kaldes en \textit{polyede på standardform}. 
 % Kommentar til at der her er derfor det er rellevant og at det vil blive uddybet senere 
 % Eventuelt med et eksempel 
 %lidt forskellige muligheder her, enten kan det relateres til simplex eller blive introduceret her
 %
-Det gælder endvidere for polytoper at disse både kan være \textit{begrænsede} og \textit{ubegrænsede}.
+Det gælder endvidere for polyeder at disse både kan være \textit{begrænsede} og \textit{ubegrænsede}.
 %
 \begin{defn}{}{}
 En mængde $S \subset \R^n$ er \textbf{begrænset} såfremt der eksister en konstant $c$, hvorom det gælder, at den absolutte værdi af alle komponenter i alle elementer i $S$ er $\leq c$. 
@@ -28,7 +28,7 @@ Såfremt en sådan konstant ikke eksisterer er mængden \textbf{ubegrænset}.
 I henhold til lineære programmeringsproblemer vil dette ofte være begrænset.
 % Dette er eksempelvis tilfældet, hvis problemet er af en sådan karakter, at ingen af variabelene i karakterligningen kan have negative værdier.
 %er det rigtigt det jeg skriver i ovenstående?
-Ligeledes er det en fordel at definere polytope, der er begrænset af kun én lineær betingelse. 
+Ligeledes er det en fordel at definere polyeder, der er begrænset af kun én lineær betingelse. 
 %
 %skal der laves en definition på et polyede?
 %
