Update linear_uafhangighed.tex and under_bas_dim.tex

--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -742,3 +742,12 @@ Dermed kan spannet af $\S$ vælges til
 %Derfor har vi minimum fundet én linearkombination som er ikke-nul, som giver os nulvektoren, og derfor er det bevist at vektorsættet lineært afhængig.
 %\end{eks}
 %
+Følgende udvalgte egenskaber ved lineært afhængige og uafhængige mængder, er vigtige for visse beviser senere i rapporten.
+\subsubsection{Egenskaber af lineært afhængige og uafhængige mængder}\label{egenskab_lin}
+\begin{enumerate}
+\item En mængde bestående af én ikke-nul er lineært uafhængig, men $\{\textbf{0}\}$ er lineært afhængig.
+\item Ethvert underrum af $\R^n$ der indeholder mere end $n$ vektorer er lineært afhængig
+\item Hvis spannet $\S$ er et underrum af $\R^n$ og ingen vektorer kan fjernes uden at ændre spannet, så er $\S$ lineært uafhængig
+
+\end{enumerate}
+
