--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -19,8 +19,8 @@ Mængden $\{\textbf{0}\}$ er ligeså et underrum til $\R^n$, kaldet \textit{nul-
 Spannet af en endelig ikke-tom delmængde af $\R^n$ er et underrum af $\R^n$.
 \end{thm}
 \begin{proof}
-Lad spannet af en endelig ikke-tom mængde være 
-$\S=\{\textbf{w}_1 , \textbf{w}_2 , \ldots , \textbf{w}_j\}$.
+Lad $\S$ være spannet af en endelig ikke-tom mængde 
+$\{\textbf{w}_1 , \textbf{w}_2 , \ldots , \textbf{w}_j\}$.
 Eftersom der kan opskrives en linearkombination 
 $$0\textbf{w}_1 + 0\textbf{w}_2 + \cdots + 0\textbf{w}_j=\textbf{0},$$ 
 så er $\textbf{0}$ i  $\S$, hvilket opfylder betingelse (a) i definition \ref{defn:underrum}.
@@ -123,4 +123,21 @@ Der findes dog flere mulige baser for det samme underrum.
 %
 Pivotsøjlerne i en matrix udgør basis for dens søjlerum. Dette følger af bevis \ref{thm:pivotu}.
 \\\\
-% Bevis mangler sætning 2.4 i bogen, bevis er i appendiks E xD
+\begin{thm}{}{}
+Lad $V$ være et ikke nul underrum af $\R^n$. Enhver to baser for $V$ indeholder det samme antal vektorer.
+\end{thm}
+\begin{proof}
+Antag at $\{\textbf{u}_1,\textbf{u}_2,\ldots,\textbf{u}_k\} $ og $\{\textbf{v}_1,\textbf{v}_2,\ldots,\textbf{v}_p\} $ er baser for $V$ og lad $A=[\textbf{u}_1 \text{ } \textbf{u}_2 \text{ }  \ldots \text{ } \textbf{u}_k] $ og $B=[\textbf{v}_1 \text{ } \textbf{v}_2 \text{ }  \ldots \text{ } \textbf{v}_k] $.
+Efter som $\{\textbf{u}_1,\textbf{u}_2,\ldots,\textbf{u}_k\} $ er en mængde af generatorer for $V$, så eksisterer der vektorer $\textbf{c}_i$ i $\R^k$, for $I=1,2,\ldots,p$ sådan at det opfylder $A\textbf{c}_i=\textbf{v}_i$.
+Lad $C=[\textbf{c}_1 \text{ } \textbf{c}_2 \text{ } \ldots \text{ } \textbf{c}_p]$.
+$C$ er dermed en $ k \text{ } \times \text{ } p$ matrix, hvorom det gælder at $AC=B$.
+Antag nu er der for nogle vektorer $\textbf{x}$ i $\R^p$ gælder $C\textbf{x}=\textbf{0}$. 
+Så er $B\textbf{x}=AC\textbf{x}=\textbf{0}$. 
+Men da søjlerne af $B$ er lineært uafhængige følger det af sætning \ref{thm:mxlinuaf} at $\textbf{x}=\textbf{0}$.
+Af samme sætning haves det så at søjlerne af $C$ er lineært uafhængige vektorer i $\R^k$.
+Da en mængde af vektorer i $\R^k$ med mere en k vektorer er lineært afhængig, haves det at $p\leq k$. 
+Vendes rollerne af baserne om, haves $k \leq p$. 
+Deraf konkluderes der a k=p, og dermed at to baser indeholder samme antal vektorer. 
+
+egenskab (2) for lineært afhængige og uafhængige mængder, se side \pageref{egenskab_lin}.
+\end{proof}
