--- a/fig/tikz/geometri/hyperplan.tex
+++ b/fig/tikz/geometri/hyperplan.tex
@@ -1,3 +1,26 @@
-\begin{minipage}[b]{0.45\textwidth}
-fisk
-\end{minipage}
+\begin{center}
+\begin{tikzpicture}
+% Den øverste linje
+\draw[name path=b,-, white, thick] (0,3.5) -- (6,3.5);
+%
+% Den nederste linje
+\draw[name path=c,-, white, thick] (0,-1) -- (6,-1);
+%
+% Den mellemste linje
+\draw[name path=a,-, white, thick] (0,0) -- (6,3);
+%
+% Farvning 
+\tikzfillbetween [of=a and b]{myblue!5}
+\tikzfillbetween [of=a and c]{myred!5}
+%
+% Linjen mellem 
+\draw[-, black, very thick] (0,0) -- (6,3);
+\draw[->, black, thick] (2.4,1.2) -- (2,2);
+\filldraw[black] (0.2,-0.3) circle (0pt) node[anchor=west] {$\mathbf{a}^T \mathbf{x}=b$};
+\filldraw[black] (3,2.6) circle (0pt) node[anchor=west] {$\mathbf{a}^T \mathbf{x} > b$};
+\filldraw[black] (3,1.3) circle (0pt) node[anchor=west] {$\mathbf{a}^T \mathbf{x} < b$};
+\filldraw[black] (1.6,2.2) circle (0pt) node[anchor=west] {$\mathbf{a}$};
+\end{tikzpicture}
+  \captionof{figure}{Et hyperplan og to halvrum, markeret med henholdsvis blå for den øvre halvrum $\mathbf{a}^T \mathbf{x} < b$ og rød for den nedre halvrum $\mathbf{a}^T \mathbf{x} > b$.}
+  \label{fig:Graf123}
+\end{center}
