--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -69,32 +69,7 @@ På figur \ref{fig:Graf123} ses et udsnit af hyperplanet, som afskærer det øvr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Flot graf alla Julie     %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{center}
-\begin{tikzpicture}
-% Den øverste linje
-\draw[name path=b,-, white, thick] (0,3.5) -- (6,3.5);
-%
-% Den nederste linje
-\draw[name path=c,-, white, thick] (0,-1) -- (6,-1);
-%
-% Den mellemste linje
-\draw[name path=a,-, white, thick] (0,0) -- (6,3);
-%
-% Farvning 
-\tikzfillbetween [of=a and b]{myblue!5}
-\tikzfillbetween [of=a and c]{myred!5}
-%
-% Linjen mellem 
-\draw[-, black, very thick] (0,0) -- (6,3);
-\draw[->, black, thick] (2.4,1.2) -- (2,2);
-\filldraw[black] (0.2,-0.3) circle (0pt) node[anchor=west] {$\mathbf{a}^T \mathbf{x}=b$};
-\filldraw[black] (3,2.6) circle (0pt) node[anchor=west] {$\mathbf{a}^T \mathbf{x} > b$};
-\filldraw[black] (3,1.3) circle (0pt) node[anchor=west] {$\mathbf{a}^T \mathbf{x} < b$};
-\filldraw[black] (1.6,2.2) circle (0pt) node[anchor=west] {$\mathbf{a}$};
-\end{tikzpicture}
-  \captionof{figure}{Et hyperplan og to halvrum, markeret med henholdsvis blå for den øvre halvrum $\mathbf{a}^T \mathbf{x} < b$ og rød for den nedre halvrum $\mathbf{a}^T \mathbf{x} > b$.}
-  \label{fig:Graf123}
-\end{center}
+\input{fig/tikz/geometri/hyperplan}
 %
 Med udgangspunkt i polyeden $\mathcal{P}$ på figur \ref{fig:nej2} består polyeden af fire hyperplaner. 
 Fællesmængden for de øvre halvrum udgør polygonet.
@@ -104,39 +79,7 @@ På figur \ref{fig:nej5} er de fire hyperplaner markeret.
 %%% Flot graf alla Julie     %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-\begin{center}
-%start tikz picture, and use the tdplot_main_coords style to implement the display 
-%coordinate transformation provided by 3dplot
-\begin{tikzpicture}[scale=5]%[scale=5,tdplot_main_coords]
-%set up some coordinates 
-%-----------------------
-\coordinate (a) at (1.2,1.2,0.7);
-\coordinate (b) at (0.7,1.2,0.7);
-\coordinate (c) at (0.7,1.2,1.2);
-\coordinate (d) at (1.2,1.2,1.2);
-\coordinate (f) at (1.2,0.7,0.7);
-\coordinate (g) at (1.2,0.7,1.2);
-\coordinate (h) at (0.7,0.7,1.2);
-%
-%draw figure contents
-%--------------------
-\filldraw[fill=myblue,opacity=0.3, thick](c)--(d)--(g)--(h)--(c);
-  \draw[thick](d)--(g);
-  \draw[thick,->](1.2,0.95,1.2)--(1.1,0.95,1.2);
-  \draw[thick](d)--(c);
-  \draw[thick](g)--(h);
-  \draw[thick](h)--(c);
-%
-\draw[black] (0.91,0.96,1.2) circle (0pt) node[anchor=west] {$\mathcal{P}$};
-%draw the main coordinate system axes
-\draw[thick,->] (0,0,0) -- (1,0,0) node[anchor=south east]{$x$};
-\draw[thick] (0,0,0) -- (-0.2,0,0);
-\draw[thick,->] (0,0,0) -- (0,1,0) node[anchor=north west]{$y$};
-\draw[thick] (0,0,0) -- (0,-0.2,0);
-\end{tikzpicture}
-  \captionof{figure}{En polyede $\mathcal{P}$ markeret med blå i $\R^2$.}
-  \label{fig:nej5}
-\end{center}
+\input{fig/tikz/geometri/hyperplan_eks}
 %
 På figur \ref{fig:min_beg} udgør begrænsningerne hver sin hypeplan, hvor fællesmængden for de øvre halvrum udgør polyeden.
 
